# CMakeList.txt : CMake project for Swiat Zwierzat, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "Swiat Zwierzat.cpp" "Swiat Zwierzat.h" "Swiat.cpp" "Swiat.h" "Organizm.h" "Organizm.cpp" "GUI.h" "GUI.cpp" "Kontener.h" "Kontener.cpp" "Zwierze.h" "Zwierze.cpp" "Roslina.cpp" "Roslina.h" "zwierzeta/Antylopa.cpp" "zwierzeta/Antylopa.h" "zwierzeta/Lis.cpp" "zwierzeta/Lis.h" "zwierzeta/Owca.cpp" "zwierzeta/Owca.h" "zwierzeta/Wilk.cpp" "zwierzeta/Wilk.h" "zwierzeta/Zolw.cpp" "zwierzeta/Zolw.h" "rosliny/Trawa.cpp" "rosliny/Trawa.h" "rosliny/Mlecz.h" "rosliny/Mlecz.cpp" "rosliny/Guarana.h" "rosliny/Guarana.cpp" "rosliny/WilczeJagody.h" "rosliny/WilczeJagody.cpp" "rosliny/BarszczSosnowskiego.h" "rosliny/BarszczSosnowskiego.cpp" "Czlowiek.h" "Czlowiek.cpp")

# TODO: Add tests and install targets if needed.
